fix(machine): refresh matched modifiers during formed checks